--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   flutter_local_notifications: ^19.0.0
   provider: ^6.1.2
   intl: ^0.20.2
+  flutter_timezone: ^4.1.0
+  rxdart: ^0.28.0
+  #flutter_native_timezone: ^2.0.0
+  #rxdart_flutter: ^0.0.2
 
 dev_dependencies:
   flutter_test:
